// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Canvas > adjusts the height when updating dimensions 1`] = `
<body>
  <div>
    <div
      class="_canvas_container_25bc10 _cursor_select_25bc10"
      id="canvas-container"
    >
      <div
        class="_canvas_background_25bc10"
      >
        <div
          class="_canvas_25bc10"
          data-testid="canvas"
          id="canvas"
          tabindex="0"
        >
          <div
            class="_panzoom_25bc10"
            id="panzoom"
          >
            <div />
            <div
              class="_draggable_c0a2dc"
              data-testid="draggable_132de855-4042-4dc1-a18f-cc2e6a8f790a"
              style="left: 100px; top: 1200px;"
            />
          </div>
          <div
            class="_zoom_control_25bc10"
          >
            <div
              class="_guiding_wrapper_168ca1"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <div
                  class="unnnic-tooltip _zoom_tooltip_25bc10"
                  data-v-5e81b292=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    <div
                      class="_out_25bc10"
                    >
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_8430975284802769"
                        style="display: flex;"
                      />
                    </div>
                    <div
                      class="_percentage_25bc10"
                    >
                      100
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_8944389502016408"
                        style="display: flex;"
                      />
                    </div>
                    <div
                      class="_in_25bc10"
                    >
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_24037647929349926"
                        style="display: flex;"
                      />
                    </div>
                  </div>
                  
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-top"
                    data-v-5e81b292=""
                  >
                    
                    
                    Zoom 
                    <br
                      data-v-5e81b292=""
                    />
                    
                    
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-5e81b292=""
                    >
                      Ctrl + Scroll
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_guiding_wrapper_168ca1"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <div
                  class="unnnic-tooltip _start_tooltip_25bc10"
                  data-v-5e81b292=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    <div
                      class="_start_25bc10"
                    >
                      <span
                        class="_hide_25bc10"
                      >
                        Start of flow
                      </span>
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_760050667395958"
                        style="display: flex;"
                      />
                    </div>
                  </div>
                  
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-right"
                    data-v-5e81b292=""
                  >
                    
                    
                     
                    <br
                      data-v-5e81b292=""
                    />
                    
                    
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-5e81b292=""
                    >
                      Ctrl + Enter
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas > initializes the height to the lowest draggable 1`] = `
<body>
  <div>
    <div
      class="_canvas_container_25bc10 _cursor_select_25bc10"
      id="canvas-container"
    >
      <div
        class="_canvas_background_25bc10"
      >
        <div
          class="_canvas_25bc10"
          data-testid="canvas"
          id="canvas"
          tabindex="0"
        >
          <div
            class="_panzoom_25bc10"
            id="panzoom"
          >
            <div />
            <div
              class="_draggable_c0a2dc"
              data-testid="draggable_1e47a1e1-3c67-4df5-adf1-da542c789adb"
              style="left: 100px; top: 1200px;"
            />
          </div>
          <div
            class="_zoom_control_25bc10"
          >
            <div
              class="_guiding_wrapper_168ca1"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <div
                  class="unnnic-tooltip _zoom_tooltip_25bc10"
                  data-v-5e81b292=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    <div
                      class="_out_25bc10"
                    >
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_7966447400409138"
                        style="display: flex;"
                      />
                    </div>
                    <div
                      class="_percentage_25bc10"
                    >
                      100
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_893554717335868"
                        style="display: flex;"
                      />
                    </div>
                    <div
                      class="_in_25bc10"
                    >
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_9287295057179694"
                        style="display: flex;"
                      />
                    </div>
                  </div>
                  
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-top"
                    data-v-5e81b292=""
                  >
                    
                    
                    Zoom 
                    <br
                      data-v-5e81b292=""
                    />
                    
                    
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-5e81b292=""
                    >
                      Ctrl + Scroll
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_guiding_wrapper_168ca1"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <div
                  class="unnnic-tooltip _start_tooltip_25bc10"
                  data-v-5e81b292=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    <div
                      class="_start_25bc10"
                    >
                      <span
                        class="_hide_25bc10"
                      >
                        Start of flow
                      </span>
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_8526842385921334"
                        style="display: flex;"
                      />
                    </div>
                  </div>
                  
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-right"
                    data-v-5e81b292=""
                  >
                    
                    
                     
                    <br
                      data-v-5e81b292=""
                    />
                    
                    
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-5e81b292=""
                    >
                      Ctrl + Enter
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas > reflows collisions 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Canvas > render default 1`] = `
<body>
  <div>
    <div
      class="_canvas_container_25bc10 _cursor_select_25bc10"
      id="canvas-container"
    >
      <div
        class="_canvas_background_25bc10"
      >
        <div
          class="_canvas_25bc10"
          data-testid="canvas"
          id="canvas"
          tabindex="0"
        >
          <div
            class="_panzoom_25bc10"
            id="panzoom"
          >
            <div />
          </div>
          <div
            class="_zoom_control_25bc10"
          >
            <div
              class="_guiding_wrapper_168ca1"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <div
                  class="unnnic-tooltip _zoom_tooltip_25bc10"
                  data-v-5e81b292=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    <div
                      class="_out_25bc10"
                    >
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_5185088458870704"
                        style="display: flex;"
                      />
                    </div>
                    <div
                      class="_percentage_25bc10"
                    >
                      100
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_20303829375598337"
                        style="display: flex;"
                      />
                    </div>
                    <div
                      class="_in_25bc10"
                    >
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_4732700355503823"
                        style="display: flex;"
                      />
                    </div>
                  </div>
                  
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-top"
                    data-v-5e81b292=""
                  >
                    
                    
                    Zoom 
                    <br
                      data-v-5e81b292=""
                    />
                    
                    
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-5e81b292=""
                    >
                      Ctrl + Scroll
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="_guiding_wrapper_168ca1"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <div
                  class="unnnic-tooltip _start_tooltip_25bc10"
                  data-v-5e81b292=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    <div
                      class="_start_25bc10"
                    >
                      <span
                        class="_hide_25bc10"
                      >
                        Start of flow
                      </span>
                      <div
                        data-use-vue-component-wrap=""
                        id="__vue_wrapper_container_47955217215647217"
                        style="display: flex;"
                      />
                    </div>
                  </div>
                  
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-right"
                    data-v-5e81b292=""
                  >
                    
                    
                     
                    <br
                      data-v-5e81b292=""
                    />
                    
                    
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-5e81b292=""
                    >
                      Ctrl + Enter
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
